// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when isFree is false and there is a price range 1`] = `
<Component
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "#2d2f7f",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        color="whiteColor"
        markdown={false}
        markdownStyle={Object {}}
        type="price"
      >
        From £12
      </Text>
    </Component>
  </ImageBackground>
  <Component
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <Component
      style={
        Object {
          "flex": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Component
        style={
          Object {
            "flex": 0,
            "flexDirection": "row",
          }
        }
      >
        <Component
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            markdownStyle={Object {}}
            style={
              Object {
                "paddingTop": 12,
              }
            }
            type="small"
          >
            12:12 - 13:12
          </Text>
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            markdownStyle={Object {}}
            numberOfLines={2}
            style={
              Object {
                "paddingTop": 4,
              }
            }
            type="h3"
          >
            name
          </Text>
        </Component>
        <Component>
          <SaveEventButton
            active={false}
            onDark={false}
            onPress={[Function]}
          />
        </Component>
      </Component>
      <Text
        color="lightNavyBlueColor"
        markdown={false}
        markdownStyle={Object {}}
        type="small"
      >
        location
      </Text>
    </Component>
  </Component>
</Component>
`;

exports[`renders correctly when isFree is false and there's only one price 1`] = `
<Component
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "#2d2f7f",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        color="whiteColor"
        markdown={false}
        markdownStyle={Object {}}
        type="price"
      >
        £12
      </Text>
    </Component>
  </ImageBackground>
  <Component
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <Component
      style={
        Object {
          "flex": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Component
        style={
          Object {
            "flex": 0,
            "flexDirection": "row",
          }
        }
      >
        <Component
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            markdownStyle={Object {}}
            style={
              Object {
                "paddingTop": 12,
              }
            }
            type="small"
          >
            12:12 - 13:12
          </Text>
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            markdownStyle={Object {}}
            numberOfLines={2}
            style={
              Object {
                "paddingTop": 4,
              }
            }
            type="h3"
          >
            name
          </Text>
        </Component>
        <Component>
          <SaveEventButton
            active={false}
            onDark={false}
            onPress={[Function]}
          />
        </Component>
      </Component>
      <Text
        color="lightNavyBlueColor"
        markdown={false}
        markdownStyle={Object {}}
        type="small"
      >
        location
      </Text>
    </Component>
  </Component>
</Component>
`;

exports[`renders correctly when isFree is true 1`] = `
<Component
  style={
    Object {
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 108,
      "overflow": "hidden",
    }
  }
>
  <ImageBackground
    resizeMode="cover"
    source={
      Object {
        "uri": "https://image.jpg",
      }
    }
    style={
      Object {
        "height": 108,
        "width": 114,
      }
    }
  >
    <Component
      style={
        Object {
          "backgroundColor": "#2d2f7f",
          "height": 23,
          "justifyContent": "center",
          "paddingHorizontal": 5,
          "position": "absolute",
        }
      }
    >
      <Text
        color="whiteColor"
        markdown={false}
        markdownStyle={Object {}}
        type="price"
      >
        Free
      </Text>
    </Component>
  </ImageBackground>
  <Component
    style={
      Object {
        "flex": 1,
        "paddingLeft": 8,
      }
    }
  >
    <Component
      style={
        Object {
          "flex": 0,
          "flexDirection": "column",
          "flexGrow": 1,
          "flexShrink": 1,
        }
      }
    >
      <Component
        style={
          Object {
            "flex": 0,
            "flexDirection": "row",
          }
        }
      >
        <Component
          style={
            Object {
              "flex": 0,
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
            }
          }
        >
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            markdownStyle={Object {}}
            style={
              Object {
                "paddingTop": 12,
              }
            }
            type="small"
          >
            12:12 - 13:12
          </Text>
          <Text
            color="lightNavyBlueColor"
            markdown={false}
            markdownStyle={Object {}}
            numberOfLines={2}
            style={
              Object {
                "paddingTop": 4,
              }
            }
            type="h3"
          >
            name
          </Text>
        </Component>
        <Component>
          <SaveEventButton
            active={false}
            onDark={false}
            onPress={[Function]}
          />
        </Component>
      </Component>
      <Text
        color="lightNavyBlueColor"
        markdown={false}
        markdownStyle={Object {}}
        type="small"
      >
        location
      </Text>
    </Component>
  </Component>
</Component>
`;
